--- a/2_CSS/1_inline_css/index.html
+++ b/2_CSS/1_inline_css/index.html
@@ -9,6 +9,8 @@
 <body>
     <!-- comentário sem conteúdo = atalho = ctrl + ; -->
     <!-- 1_ Inline CSS -->
-    <h1> mudei a cor com inline css</h1>    
+    <h1 style="color:rgb(176, 132, 218);"> mudei a cor com inline CSS</h1>    
+    <p style="background-color:rgb(127, 157, 255) ;">também vou usar inline CSS aqui</p>
+    <!--  -->
 </body>
 </html>
