--- a/4_id_class/index.html
+++ b/4_id_class/index.html
@@ -7,16 +7,16 @@
     <title>ID e CLASS</title>
 </head>
 <body>
-    <h1>ID e CLASS</h1>
+    <h1 class="fundo amarelo">ID e CLASS</h1>
 
-    <h2>CLASS</h2>
-    <p>Existem duas características principais do class:</p>
+    <h2 class="fundo-amarelo texto-vermelho">CLASS</h2>
+    <p class="fundo-amarelo">Existem duas características principais do class:</p>
     <ul>
         <li>É possível utilizar o mesmo class em vários elementos diferentes</li>
         <li>É possível utilizar várias classes no MESMO elemento</li>
     </ul>
 
-    <h2>ID</h2>
+    <h2 id="titulo-h2">ID</h2>
     <p>Existem duas características principais do ID que são contrastantes com as características do class:</p>
     <ul>
         <li>Não é possível utilizar o mesmo ID em vários elementos diferentes.</li>
